@@ -1,3 +1,4 @@
+* #2522: Use an exponential backoff when trying to reconnect CM (cassidy)
 * #4907: Try to reconnect Gabble if initial attempt failed (cassidy)
 
 Snapshot 89c33bcf93
